Fix icon on mobile

--- a/index.css
+++ b/index.css
@@ -138,18 +138,31 @@ body.not-started .form-container{
     background-size: contain;
 }
 
-.btn {
-    height: 5vw;
-    width: 5vw;
-    border: 0px;
-    position: absolute;
+.controls {
     bottom: 0px;
+    position: absolute;
     right: 0px;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-color: transparent;
-    margin: 10px;
     z-index: 100;
+}
+
+.btn {
+    background-color: black;
+    border-radius: 50%;
+    border: 2px solid white;
+    color: white;
+    font-size: 3vw;
+    height: 5vw;
+    margin: 10px;
+    width: 5vw;
+}
+
+@media only screen and (max-width: 990px) {
+    .btn {
+        font-size: 4vw;
+        height: 10vw;
+        width: 10vw;
+        margin: 5px;
+    }
 }
 
 .btn-cat, .btn-dog{
@@ -168,62 +181,8 @@ body.cat .btn-dog{
     display: none
 }
 
-.btn.btn-dog {
-    background-image: url('img/dog.svg');
-}
-
-.btn.btn-cat {
-    background-image: url('img/cat.svg');
-}
-
-.btn.btn-play {
-    background-image: url('img/play.svg');
-    right: 6vw;
-    background-color: white;
-    border-radius: 50%;
-}
-
-.btn.btn-pause {
-    background-image: url('img/pause.svg');
-    right: 6vw;
-    background-color: white;
-    border-radius: 50%;
-}
-
-.btn.btn-copy {
-    background-color: black;
-    border-radius: 50%;
-    color: white;
-    font-size: 27px;
-}
-
-.btn.btn-copy {
-    right: 12vw;
-}
-
-@media only screen and (max-width: 990px) {
-    .btn {
-        height: 10vw;
-        width: 10vw;
-    }
-
-    .btn.btn-play, .btn.btn-pause {
-        right: 12vw;
-    }
-
-    .btn.btn-copy {
-        right: 24vw;
-    }
-}
-
 div#preload { 
     display: none; 
-}
-
-.btn {
-    -webkit-filter: drop-shadow( 0px 0px 3px white);
-    filter: drop-shadow( 0px 0px 3px white);
-    outline: 0;
 }
 
 a.contact-link {
